--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .main {
-  
   max-width: 100%;
   overflow-x: hidden;
   text-align: center;
@@ -32,35 +31,15 @@
   height:fit-content;
   height: fit-content;
   width: 100vw;
+  margin-top: -1%;
 }
 
-@media only screen and (max-width: 768px) {
-  .header-mint{
-    background-position-x: -355px;
-
-  }
-  .team{    
-    margin-top: -1%;
-    background-size: cover;
-    background-position-x: -250px;
-  }
-  .about{
-    margin-top: -1%;
-    background-size: cover;
-    background-position-x: -820px;
-
-
-  }
-}
-.wagmi-egg{
-  src: url("./assets/jpg/wagmisaur.jpg");
-}
 
 html {
   scroll-behavior: smooth
 }
 
 body {
-  background: #5c6da6
+  background: #ffffff
 }
 
