--- a/src/style/Why.css
+++ b/src/style/Why.css
@@ -3,6 +3,16 @@
     flex-direction: row;
 }
 
+.text-border{
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 1.5%;
+    padding: 2%;
+    border-radius: 15px;
+    border: 3px solid rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.8)
+}
+
 @media only screen and (max-width: 768px) {
     .why-container{
         display: flex;
